standard/api-gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api-ns

---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api-ns
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: api-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
      name: api-po
  template:
    metadata:
      labels:
        app: api
        name: api-po
    spec:
      containers:
      - name: api-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 3000

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-httproute
  namespace: api-ns
spec:
  hostnames:
  - api.192.168.39.200.sslip.io
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: traefik
    name: traefik-gateway
    sectionName: web
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: api-svc
      port: 3000
