standard/api-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api-ns

---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api-ns
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: api-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
      name: api-po
  template:
    metadata:
      labels:
        app: api
        name: api-po
    spec:
      containers:
      - name: api-container
        image: chukmunnlee/fake-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ing
  namespace: api-ns
spec:
  ingressClassName: traefik
  rules:
  - host: api.192.168.39.200.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-svc
            port:
              number: 3000
